ci_logs.txt
   Compiling executor v0.1.0 (/workspace/aniper/executor)
error[E0432]: unresolved imports `crate::metrics::set_risk_equity_usdc`, `crate::metrics::set_risk_last_slippage`, `crate::metrics::set_risk_slippage_threshold`
  --> executor/src/risk.rs:17:22
   |
17 | use crate::metrics::{set_risk_equity_usdc, set_risk_last_slippage, set_risk_slippage_threshold};
   |                      ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `set_risk_slippage_threshold` in `metrics`
   |                      |                     |
   |                      |                     no `set_risk_last_slippage` in `metrics`
   |                      no `set_risk_equity_usdc` in `metrics`

error[E0432]: unresolved imports `super::metrics::inc_trades_confirmed`, `super::metrics::inc_trades_submitted`
 --> executor/src/trader.rs:2:22
  |
2 | use super::metrics::{inc_trades_confirmed, inc_trades_submitted};
  |                      ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^ no `inc_trades_submitted` in `metrics`
  |                      |
  |                      no `inc_trades_confirmed` in `metrics`

warning: use of deprecated function `base64::decode`: Use Engine::decode
   --> executor/src/trader.rs:106:23
    |
106 |     let raw = base64::decode(resp.swap_transaction.clone())?;
    |                       ^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

error[E0599]: no method named `pubkey` found for struct `Keypair` in the current scope
  --> executor/src/risk.rs:71:29
   |
71 |         rpc.get_balance(&kp.pubkey())
   |                             ^^^^^^
   |
  ::: /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/solana-sdk-1.18.26/src/signer/mod.rs:72:8
   |
72 |     fn pubkey(&self) -> Pubkey {
   |        ------ the method is available for `Keypair` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Signer` which provides `pubkey` is implemented but not in scope; perhaps you want to import it
   |
9  + use solana_sdk::signature::Signer;
   |
help: there is a method `try_pubkey` with a similar name
   |
71 |         rpc.get_balance(&kp.try_pubkey())
   |                             ++++

error[E0284]: type annotations needed
  --> executor/src/metrics.rs:43:46
   |
26 |         let server = hyper::Server::bind(&addr).serve(hyper::service::make_service_fn(move |_| {
   |                                                 ----- type must be known at this point
...
43 |                                             .body("unauthorized".into())
   |                                              ^^^^ cannot infer type of the type parameter `T` declared on the method `body`
   |
   = note: cannot satisfy `<_ as HttpBody>::Error == _`
help: consider specifying the generic argument
   |
43 |                                             .body::<T>("unauthorized".into())
   |                                                  +++++

error[E0283]: type annotations needed
  --> executor/src/metrics.rs:43:46
   |
43 | ...                   .body("unauthorized".into())
   |                        ^^^^                ---- type must be known at this point
   |                        |
   |                        cannot infer type of the type parameter `T` declared on the method `body`
   |
   = note: multiple `impl`s satisfying `&str: Into<_>` found in the following crates: `core`, `rtoolbox`:
           - impl<'a> Into<rtoolbox::safe_string::SafeString> for &'a str;
           - impl<T, U> Into<U> for T
             where U: From<T>;
help: consider specifying the generic argument
   |
43 |                                             .body::<T>("unauthorized".into())
   |                                                  +++++

error[E0283]: type annotations needed
  --> executor/src/metrics.rs:43:46
   |
43 |                                             .body("unauthorized".into())
   |                                              ^^^^ cannot infer type of the type parameter `T` declared on the method `body`
...
50 |                         Ok::<_, hyper::Error>(hyper::Response::new(body.into()))
   |                                                                         ---- type must be known at this point
   |
   = note: multiple `impl`s satisfying `std::string::String: Into<_>` found in the following crates: `core`, `rtoolbox`:
           - impl Into<rtoolbox::safe_string::SafeString> for std::string::String;
           - impl<T, U> Into<U> for T
             where U: From<T>;
help: consider specifying the generic argument
   |
43 |                                             .body::<T>("unauthorized".into())
   |                                                  +++++

warning: variable does not need to be mutable
   --> executor/src/trader.rs:165:13
    |
165 |         let mut ixs = vec![ComputeBudgetInstruction::set_compute_unit_price(
    |             ----^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

Some errors have detailed explanations: E0283, E0284, E0432, E0599.
For more information about an error, try `rustc --explain E0283`.
warning: `executor` (lib test) generated 2 warnings (1 duplicate)
error: could not compile `executor` (lib test) due to 6 previous errors; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `executor` (lib) generated 2 warnings (1 duplicate)
error: could not compile `executor` (lib) due to 6 previous errors; 2 warnings emitted
error: cannot specify features for packages outside of workspace

no tests ran in 0.34s
DRY RUN: Would execute replay harness with mock data
Command: cargo run --release --bin executor -- --replay tests/data/mock_data.json
src:1:1: E902 No such file or directory (os error 2)
Found 1 error.
error: 'cargo-fmt' is not installed for the toolchain 'stable-x86_64-unknown-linux-gnu'.
To install, run `rustup component add rustfmt`
